--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "svelte": "^3.0.0"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "date-fns": "^2.4.1",
     "sirv-cli": "^0.4.4"
   },
