--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "date-fns": "^2.4.1",
+    "lodash": "latest",
     "sirv-cli": "^0.4.4"
   },
   "scripts": {
